# rocksdb-android

./: .gitmodules
.github/workflows/: android-build-multi-arch.yml
bz2/: CMakeLists.txt  build.gradle.kts
lz4/: CMakeLists.txt  build.gradle.kts
snappy/: CMakeLists.txt  build.gradle.kts
zstd/: build.gradle.kts
